--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
               <strong>Weiyu Liu</strong>,
               <a href="https://robot-learning.cs.utah.edu/thermans">Tucker Hermans</a>,
               <br>
-              <em>Under Review</em>, 2023
+              <em>Transactions on Robotics (TR-O)</em>, 2023
               <br>
               <a href="https://arxiv.org/abs/2305.10857">arxiv</a> /
               <a href="https://sites.google.com/view/erelationaldynamics">website</a> /
@@ -453,7 +453,7 @@
               <strong>Weiyu Liu</strong>,
               <a href="https://webdocs.cs.ualberta.ca/~zhang/index.html">Hong Zhang</a>
               <br>
-              <em>Under Review</em>, 2023
+              <em>Robotics and Automation Letters (RA-L)</em>, 2023
               <br>
               <a href="https://arxiv.org/abs/2307.13204">arxiv</a> /
               <a href="https://github.com/mkt1412/GraspGPT_public">code & data</a> /
