--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
               <br>
               <em>Conference on Robot Learning (CoRL)</em>, 2024
               <br>
+              <em>2nd Workshop on Learning Effective Abstractions for Planning (LEAP)</em>, 2024 <font color="red"><strong>(Oral Presentation)</strong></font>
+              <br>
               <a href="https://openreview.net/forum?id=fR1rCXjCQX&noteId=fR1rCXjCQX">paper</a> /
               <a href="https://blade-bot.github.io/">website</a> /
               <a href="data/blade.bib">bibtex</a>
@@ -230,6 +232,8 @@
               <br>
               <em>Neural Information Processing Systems (NeurIPS) Datasets and Benchmarks Track</em>, 2024
               <br>
+              <font color="red"><strong>(Oral Presentation)</strong></font>
+              <br>
               <a href="https://arxiv.org/abs/2410.07166">paper</a> /
               <a href="https://embodied-agent-interface.github.io/">website</a> /
               <a href="https://github.com/embodied-agent-interface/embodied-agent-interface">code</a> /
@@ -263,30 +267,6 @@
               <a href="https://marple-benchmark.github.io/">website</a> /
               <a href="https://github.com/marple-benchmark/marple">code and data</a> /
               <a href="data/marple.bib">bibtex</a>
-            </td>
-          </tr>
-
-
-          <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/survey.jpg" alt="survey_png" width="160" style="border-style: none">
-            </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://www.sciencedirect.com/science/article/abs/pii/S092188902200183X">
-                <papertitle>A Survey of Semantic Reasoning Frameworks for Robotic Systems</papertitle>
-              </a>
-              <br>
-              <br>
-              <strong>Weiyu Liu<sup>1</sup></strong>,
-              <a href="http://www.prism.gatech.edu/~adaruna3/">Angel Daruna<sup>1</sup></a>,
-              <a href="https://maithili.github.io/">Maithili Patel<sup>2</sup></a>,
-              <a href="https://kartikvrama.github.io/">Kartik Ramachandruni<sup>2</sup></a>,
-              <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>
-              <br>
-              <em>Robotics and Autonomous Systems</em>, 2023
-              <br>
-              <a href="https://www.sciencedirect.com/science/article/abs/pii/S092188902200183X">paper</a> /
-              <a href="data/LiuSurvey2023.bib">bibtex</a>
             </td>
           </tr>
 
@@ -537,7 +517,10 @@
               <br>
               <em>Robotics: Science and Systems (RSS)</em>, 2021
               <br>
+              <em>Autonomous Robots</em>, 2023 &nbsp <font color="red"><strong>(Invited Submission)</strong></font>
+              <br>
               <a href="http://www.roboticsproceedings.org/rss17/p035.html">paper</a> /
+              <a href="https://link.springer.com/article/10.1007/s10514-023-10099-4">Journal (extended version)</a> /
               <a href="https://github.com/wliu88/LINK">code & data</a> /
               <a href="https://youtu.be/uFxXQxOuTlo">talk</a> /
               <a href="data/LiuRSS2021.bib">bibtex</a>
