--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
               <em>Autonomous Robots</em>, 2023 &nbsp <font color="red"><strong>(Invited Submission)</strong></font>
               <br>
               <a href="http://www.roboticsproceedings.org/rss17/p035.html">paper</a> /
-              <a href="https://link.springer.com/article/10.1007/s10514-023-10099-4">Journal (extended version)</a> /
+              <a href="https://link.springer.com/article/10.1007/s10514-023-10099-4">journal (extended version)</a> /
               <a href="https://github.com/wliu88/LINK">code & data</a> /
               <a href="https://youtu.be/uFxXQxOuTlo">talk</a> /
               <a href="data/LiuRSS2021.bib">bibtex</a>
