--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
               <br>
               <a href="https://yunongliu.com/">Yunong Liu</a>,
               <a href="https://ceyzaguirre4.github.io/">Cristobal Eyzaguirre</a>,
+              <a href="https://limanling.github.io/">Manling Li</a>,
+              <a href="https://shubhkhanna.com/">Shubh Khanna</a>,
               <a href="https://www.niebles.net/">Juan Carlos Niebles</a>,
               <a href="https://scholar.google.com/citations?user=iNT6NOAAAAAJ&hl=en">Vineeth Ravi</a>,
               <a href="https://sites.google.com/site/saumitramishrac4dm">Saumitra Mishra</a>,
