--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
           <h3>Weiyu Liu</h3>
         </div>
         <p>
-          I am an incoming Assistant Professor in the <a href="https://www.cs.utah.edu/">Kahlert School of Computing</a> at the University of Utah.
-          Currently, I am a Postdoctoral Scholar working with 
-          <a href="https://jiajunwu.com/">Jiajun Wu</a> in the CogAI group and 
-          <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab (SVL)</a>.
+          I am an incoming Assistant Professor in the <a href="https://www.cs.utah.edu/">Kahlert School of Computing</a> at the University of Utah. Currently, I am part of the research team at a stealth startup developing robotic foundation models.
+          I was a Postdoctoral Scholar working with 
+          <a href="https://jiajunwu.com/">Jiajun Wu</a> in the <a href="https://svl.stanford.edu/">Stanford Vision and Learning Lab (SVL)</a>.
           I completed my Ph.D. in robotics at Georgia Institute of Technology, 
           advised by <a href="https://www.cc.gatech.edu/~chernova/">Sonia Chernova</a>. 
           During my Ph.D., I interned at the <a href="https://research.nvidia.com/labs/srl/">NVIDIA Seattle Robotics Lab</a>, working with 
@@ -129,9 +128,9 @@
     </div>
     <div>
       <ul id="newsList">
-        <li>05/2025 – Will organize the <a href="https://foundation-models-meet-embodied-agents.github.io/cvpr2025/">CVPR 2025 Workshop on Foundation Models for Embodied Agents</a></li>
+        <li>05/2025 – Organized the <a href="https://foundation-models-meet-embodied-agents.github.io/cvpr2025/">CVPR 2025 Workshop on Foundation Models for Embodied Agents</a></li>
         <li>04/2025 – Gave a guest lecture in CS 8001: Robotics and Human-Robot Interaction at Georgia Tech</li>
-        <li>03/2025 – Will serve as an Area Chair (AC) for <a href="https://www.corl.org/">CoRL 2025</a></li>
+        <li>03/2025 – Served as an Area Chair (AC) for <a href="https://www.corl.org/">CoRL 2025</a></li>
         <li>02/2025 – Gave a guest lecture in <a href="https://limanling.github.io/teaching/cs396-reasoning-planning/">CS 396: Reasoning and Planning in the Foundation Model Era</a> at Northeastern University</li>
       </ul>
       <div class="collapse" id="collapseNews">
@@ -156,7 +155,7 @@
       <h5>Group</h5>
     </div>
     <p>
-      <span class="highlight-text">I am looking for motivated and talented students to join my research group.</span>
+      <span class="highlight-text">I am looking for motivated and talented students to join my research group in Fall 2026.</span>
       <br>
       <a data-bs-toggle="collapse" href="#collapseRecruitment" role="button" aria-expanded="false" aria-controls="collapseRecruitment" class="text-decoration-none" id="recruitmentToggle">
          Click here to read more <i class="fas fa-chevron-down fa-xs"></i>
