--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="row align-items-center gy-4">
       <div class="col-sm-3">
         <img
-          src="images/WeiyuLiuRobot.jpg"
+          src="images/headshot_outdoor.jpg"
           class="img-fluid rounded border"
           alt="Profile Photo of Weiyu Liu">
       </div>
