--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <li>05/2025 – Organized the <a href="https://foundation-models-meet-embodied-agents.github.io/cvpr2025/">CVPR 2025 Workshop on Foundation Models for Embodied Agents</a></li>
         <li>04/2025 – Gave a guest lecture in CS 8001: Robotics and Human-Robot Interaction at Georgia Tech</li>
         <li>03/2025 – Served as an Area Chair (AC) for <a href="https://www.corl.org/">CoRL 2025</a></li>
-        <li>02/2025 – Gave a guest lecture in <a href="https://limanling.github.io/teaching/cs396-reasoning-planning/">CS 396: Reasoning and Planning in the Foundation Model Era</a> at Northeastern University</li>
+        <li>02/2025 – Gave a guest lecture in <a href="https://limanling.github.io/teaching/cs396-reasoning-planning/">CS 396: Reasoning and Planning in the Foundation Model Era</a> at Northwestern University</li>
       </ul>
       <div class="collapse" id="collapseNews">
         <ul id="moreNewsList">
